--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <meta name="author" content="All That Spine" />
     <meta name='viewport' content='width=device-width' />
     <!-- FAVICON -->
-    <link rel=”shortcut icon” href='/img/favicon.ico'> 
+    <link rel=”shortcut icon” href='img/favicon.ico'> 
     <!-- CDN -->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/slick.css">
-    <link rel="stylesheet" href="/css/slick-theme.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- JS -->
-    <script src="/js/slick.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/main.js"></script>
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- TITLE -->
