이미지 링크 수정

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="head_top">
             <div class="logo">
                 <a href="/">
-                    <img src="/img/logo.png" alt="">
+                    <img src="img/logo.png" alt="">
                 </a>
             </div>
             <div class="head_contents">
@@ -53,10 +53,10 @@
             </div>
         </section>
         <section class="slider">
-            <div><img src="/img/main1.png" alt=""></div>
-            <div><img src="/img/main2.jpg" alt=""></div>
-            <div><img src="/img/main3.jpg" alt=""></div>
-            <div><img src="/img/main4.jpg" alt=""></div>
+            <div><img src="img/main1.png" alt=""></div>
+            <div><img src="img/main2.jpg" alt=""></div>
+            <div><img src="img/main3.jpg" alt=""></div>
+            <div><img src="img/main4.jpg" alt=""></div>
         </section>
         <section class="faq">
             <h2 class="title">자주하는 질문</h2>
@@ -218,9 +218,9 @@
             <div class="inner">
                 <h2 class="title blin">Our<br/>Partners</h2>
                 <ul>
-                    <li><img src="/img/partner01.png" alt=""></li>
-                    <li><img src="/img/partner02.png" alt=""></li>
-                    <li><img src="/img/partner03.png" alt=""></li>
+                    <li><img src="img/partner01.png" alt=""></li>
+                    <li><img src="img/partner02.png" alt=""></li>
+                    <li><img src="img/partner03.png" alt=""></li>
                 </ul>
             </div>
         </section>
@@ -229,7 +229,7 @@
         <div class="inner">
             <div class="contents">
                 <div class="flogo">
-                    <img src="/img/flogo.png" alt="">
+                    <img src="img/flogo.png" alt="">
                 </div>
                 <nav>
                     <a href="service.html">서비스 소개</a>
