--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
         <div class="head_top">
             <div class="logo">
                 <a href="/">
-                    <img src="/img/logo.png" alt="">
+                    <img src="img/logo.png" alt="">
                 </a>
             </div>
             <div class="head_contents">
@@ -113,7 +113,7 @@
         <div class="inner">
             <div class="contents">
                 <div class="flogo">
-                    <img src="/img/flogo.png" alt="">
+                    <img src="img/flogo.png" alt="">
                 </div>
                 <nav>
                     <a href="service.html">서비스 소개</a>
