--- a/faq.html
+++ b/faq.html
@@ -37,17 +37,67 @@
             <img src="img/logo.png" alt="" />
           </a>
         </div>
+        <!-- head_search => index 비노출 -->
+        <div class="head_search">
+          <div class="input_wrap">
+            <input
+              type="search"
+              name="mainSearch"
+              id="mainSearch"
+              onclick="location.href='qna.html'"
+              placeholder="궁금한 것은 무엇이든 물어보세요!"
+            />
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+          </div>
+        </div>
         <div class="head_contents">
           <div class="alert">
             <i class="fa-regular fa-bell"></i>
           </div>
           <div class="login">
-            <button>로그인/회원가입</button>
+            <button>프로필(마이페이지)</button>
+            <ul>
+              <li><a href="myfaq.html">활동관리</a></li>
+              <li><a href="mypage.html">개인정보 관리</a></li>
+              <li><a href="">로그아웃</a></li>
+            </ul>
           </div>
           <div class="lang">
             <p class="blin lang_btn"><a href="#none" class="active">KOR</a> | <a href="#none">ENG</a></p>
           </div>
         </div>
+      </div>
+      <div class="alert_popup">
+        <h2 class="title">알림</h2>
+        <button class="alert_popup_close"><i class="fa-solid fa-xmark"></i></button>
+        <button class="read_all">모두읽기</button>
+        <ul>
+          <li>
+            <p><a href="myfaq.html">질문에 답변이 작성되었습니다.</a></p>
+            <span class="date">2023.08.28</span>
+            <span class="new">NEW</span>
+          </li>
+          <li>
+            <p><a href="myfaq.html">질문에 답변이 작성되었습니다.</a></p>
+            <span class="date">2023.08.28</span>
+            <span class="new">NEW</span>
+          </li>
+          <li>
+            <p><a href="myfaq.html">질문에 답변이 작성되었습니다.</a></p>
+            <span class="date">2023.08.28</span>
+            <span class="new">NEW</span>
+          </li>
+          <li>
+            <p><a href="myfaq.html">질문에 답변이 작성되었습니다.</a></p>
+            <span class="date">2023.08.28</span>
+            <span class="new">NEW</span>
+          </li>
+          <li>
+            <p><a href="myfaq.html">질문에 답변이 작성되었습니다.</a></p>
+            <span class="date">2023.08.28</span>
+            <span class="new">NEW</span>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -70,13 +120,13 @@
           </ul>
           <div class="contents">
             <div class="list tab1 active">
-              <div class="qna_list active">
+              <div class="qna_list">
                 <div class="que">
                   <b class="blin">Q</b>
                   <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
                   <i class="fa-solid fa-angle-down"></i>
                 </div>
-                <div class="ans">
+                <div class="ans active">
                   <b class="blin">A</b>
                   <p>
                     안녕하세요. 홍덕진 의사입니다.<br /><br />
