--- a/index.html
+++ b/index.html
@@ -40,14 +40,8 @@
         <!-- head_search => index 비노출 -->
         <div class="head_search">
           <div class="input_wrap">
-            <input
-              type="search"
-              name="mainSearch"
-              id="mainSearch"
-              onclick="location.href='qna.html'"
-              placeholder="궁금한 것은 무엇이든 물어보세요!"
-            />
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <input type="search" name="mainSearch" id="mainSearch" placeholder="궁금한 것은 무엇이든 물어보세요!" />
+            <button onclick="location.href='qna.html'"><i class="fa-solid fa-magnifying-glass"></i></button>
           </div>
         </div>
         <div class="head_contents">
@@ -102,19 +96,10 @@
     </header>
     <main>
       <section class="search">
-        <div class="seach_wrap">
-          <h2 class="title blin">All That Spine</h2>
-          <div class="input_wrap">
-            <input type="search" name="" id="" />
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
-          </div>
-        </div>
-
-        <div class="result_wrap">
-          <p class="login_text">로그인을 하면 AI 답변을 받을 수 있어요.</p>
-          <div class="default_faq">
-            <h2 class="title"><b>*</b>올 댓 스파인에서 찾은 질문!</h2>
-          </div>
+        <h2 class="title blin">All That Spine</h2>
+        <div class="input_wrap">
+          <input type="search" name="" id="" />
+          <button onclick="location.href='qna.html'"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
       </section>
       <section class="slider">
@@ -315,6 +300,7 @@
           </div>
           <nav>
             <a href="service.html">서비스 소개</a>
+            <a href="qna.html">전문가 답변</a>
             <a href="faq.html">자주묻는 질문</a>
             <a href="notice.html">공지사항</a>
             <a href="contact.html">문의하기</a>
