--- a/qna.html
+++ b/qna.html
@@ -40,14 +40,8 @@
         <!-- head_search => index 비노출 -->
         <div class="head_search">
           <div class="input_wrap">
-            <input
-              type="search"
-              name="mainSearch"
-              id="mainSearch"
-              onclick="location.href='qna.html'"
-              placeholder="궁금한 것은 무엇이든 물어보세요!"
-            />
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <input type="search" name="mainSearch" id="mainSearch" placeholder="궁금한 것은 무엇이든 물어보세요!" />
+            <button onclick="location.href='qna.html'"><i class="fa-solid fa-magnifying-glass"></i></button>
           </div>
         </div>
         <div class="head_contents">
@@ -101,209 +95,64 @@
       </div>
     </header>
     <main>
-      <section class="search">
-        <div class="seach_wrap">
-          <h2 class="title blin">All That Spine</h2>
-          <div class="input_wrap">
-            <input type="search" name="" id="" />
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+      <section class="qna">
+        <div class="top_banner">
+          <div class="text_box">
+            <img src="img/top_banner.png" alt="" />
+            <div>
+              <h2>전문가 답변</h2>
+              <p>전문가에게 직접 문의하세요!</p>
+            </div>
           </div>
         </div>
-
-        <div class="result_wrap">
+        <div class="inner">
+          <div class="search">
+            <h2 class="title blin">All That Spine</h2>
+            <div class="input_wrap">
+              <input type="search" name="" id="" />
+              <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
+          </div>
           <p class="login_text">로그인을 하면 AI 답변을 받을 수 있어요.</p>
-          <div class="default_faq">
-            <h2 class="title"><b>*</b>올 댓 스파인에서 찾은 질문!</h2>
+          <div class="qna_view_title">
+            <button class="qna_btn">질문하기</button>
           </div>
-        </div>
-      </section>
-      <section class="slider">
-        <div><img src="img/main1.png" alt="" /></div>
-        <div><img src="img/main2.jpg" alt="" /></div>
-        <div><img src="img/main3.jpg" alt="" /></div>
-        <div><img src="img/main4.jpg" alt="" /></div>
-      </section>
-      <section class="faq">
-        <div class="inner">
-          <h2 class="title">자주하는 질문</h2>
-          <ul class="tab">
-            <li data-tab="tab1" class="active">척추1</li>
-            <li data-tab="tab2">척추2</li>
-            <li data-tab="tab3">척추3</li>
-            <li data-tab="tab4">척추4</li>
-          </ul>
-          <div class="contents">
-            <div class="list tab1 active">
-              <div class="qna_list">
-                <div class="que">
-                  <b class="blin">Q</b>
-                  <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
-                  <i class="fa-solid fa-angle-down"></i>
-                </div>
-                <div class="ans active">
-                  <b class="blin">A</b>
-                  <p>
-                    안녕하세요. 홍덕진 의사입니다.<br /><br />
-                    허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
-                    물리적인 추간판 탈출이 아니더라도 면역 반응에 의한 염증이 발생할 수 있고, 추간판이 아닌 근육이나
-                    인대의 문제일 수도 있습니다.<br />
-                    교과서적으로는 소염제를 복용하거나 파스를 붙여서 염증 및 통증을 줄이고, 허리 근육 강화를 통해서 허리
-                    구조물을 안정화 시키는 게 일반적으로 추천되는 방법입니다.<br />
-                    진단을 위해서는 X선 검사와 MRI 검사가 필요합니다.
-                  </p>
-                </div>
+          <div class="qna_list">
+            <div class="que" onclick="location.href='qna_view.html'">
+              <div class="title">
+                <b class="blin">Q</b>
+                <p>tab3 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
               </div>
-              <div class="qna_list">
-                <div class="que">
-                  <b class="blin">Q</b>
-                  <p>tab1 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
-                  <i class="fa-solid fa-angle-down"></i>
-                </div>
-                <div class="ans">
-                  <b class="blin">A</b>
-                  <p>
-                    안녕하세요. 홍덕진 의사입니다.<br /><br />
-                    허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
-                    물리적인 추간판 탈출이 아니더라도 면역 반응에 의한 염증이 발생할 수 있고, 추간판이 아닌 근육이나
-                    인대의 문제일 수도 있습니다.<br />
-                    교과서적으로는 소염제를 복용하거나 파스를 붙여서 염증 및 통증을 줄이고, 허리 근육 강화를 통해서 허리
-                    구조물을 안정화 시키는 게 일반적으로 추천되는 방법입니다.<br />
-                    진단을 위해서는 X선 검사와 MRI 검사가 필요합니다.
-                  </p>
-                </div>
-              </div>
+              <span>2023.08.29</span>
             </div>
-            <div class="list tab2">
-              <div class="qna_list">
-                <div class="que">
-                  <b class="blin">Q</b>
-                  <p>tab2 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
-                  <i class="fa-solid fa-angle-down"></i>
-                </div>
-                <div class="ans">
-                  <b class="blin">A</b>
-                  <p>
-                    안녕하세요. 홍덕진 의사입니다.<br /><br />
-                    허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
-                    물리적인 추간판 탈출이 아니더라도 면역 반응에 의한 염증이 발생할 수 있고, 추간판이 아닌 근육이나
-                    인대의 문제일 수도 있습니다.<br />
-                    교과서적으로는 소염제를 복용하거나 파스를 붙여서 염증 및 통증을 줄이고, 허리 근육 강화를 통해서 허리
-                    구조물을 안정화 시키는 게 일반적으로 추천되는 방법입니다.<br />
-                    진단을 위해서는 X선 검사와 MRI 검사가 필요합니다.
-                  </p>
-                </div>
+            <div class="que">
+              <div class="title">
+                <b class="blin">Q</b>
+                <p>tab3 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
               </div>
-              <div class="qna_list">
-                <div class="que">
-                  <b class="blin">Q</b>
-                  <p>tab2 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
-                  <i class="fa-solid fa-angle-down"></i>
-                </div>
-                <div class="ans">
-                  <b class="blin">A</b>
-                  <p>
-                    안녕하세요. 홍덕진 의사입니다.<br /><br />
-                    허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
-                    물리적인 추간판 탈출이 아니더라도 면역 반응에 의한 염증이 발생할 수 있고, 추간판이 아닌 근육이나
-                    인대의 문제일 수도 있습니다.<br />
-                    교과서적으로는 소염제를 복용하거나 파스를 붙여서 염증 및 통증을 줄이고, 허리 근육 강화를 통해서 허리
-                    구조물을 안정화 시키는 게 일반적으로 추천되는 방법입니다.<br />
-                    진단을 위해서는 X선 검사와 MRI 검사가 필요합니다.
-                  </p>
-                </div>
-              </div>
+              <span>2023.08.29</span>
             </div>
-            <div class="list tab3">
-              <div class="qna_list">
-                <div class="que">
-                  <b class="blin">Q</b>
-                  <p>tab3 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
-                  <i class="fa-solid fa-angle-down"></i>
-                </div>
-                <div class="ans">
-                  <b class="blin">A</b>
-                  <p>
-                    안녕하세요. 홍덕진 의사입니다.<br /><br />
-                    허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
-                    물리적인 추간판 탈출이 아니더라도 면역 반응에 의한 염증이 발생할 수 있고, 추간판이 아닌 근육이나
-                    인대의 문제일 수도 있습니다.<br />
-                    교과서적으로는 소염제를 복용하거나 파스를 붙여서 염증 및 통증을 줄이고, 허리 근육 강화를 통해서 허리
-                    구조물을 안정화 시키는 게 일반적으로 추천되는 방법입니다.<br />
-                    진단을 위해서는 X선 검사와 MRI 검사가 필요합니다.
-                  </p>
-                </div>
+            <div class="que">
+              <div class="title">
+                <b class="blin">Q</b>
+                <p>tab3 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
               </div>
-              <div class="qna_list">
-                <div class="que">
-                  <b class="blin">Q</b>
-                  <p>tab3 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
-                  <i class="fa-solid fa-angle-down"></i>
-                </div>
-                <div class="ans">
-                  <b class="blin">A</b>
-                  <p>
-                    안녕하세요. 홍덕진 의사입니다.<br /><br />
-                    허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
-                    물리적인 추간판 탈출이 아니더라도 면역 반응에 의한 염증이 발생할 수 있고, 추간판이 아닌 근육이나
-                    인대의 문제일 수도 있습니다.<br />
-                    교과서적으로는 소염제를 복용하거나 파스를 붙여서 염증 및 통증을 줄이고, 허리 근육 강화를 통해서 허리
-                    구조물을 안정화 시키는 게 일반적으로 추천되는 방법입니다.<br />
-                    진단을 위해서는 X선 검사와 MRI 검사가 필요합니다.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="list tab4">
-              <div class="qna_list">
-                <div class="que">
-                  <b class="blin">Q</b>
-                  <p>tab4 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
-                  <i class="fa-solid fa-angle-down"></i>
-                </div>
-                <div class="ans">
-                  <b class="blin">A</b>
-                  <p>
-                    안녕하세요. 홍덕진 의사입니다.<br /><br />
-                    허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
-                    물리적인 추간판 탈출이 아니더라도 면역 반응에 의한 염증이 발생할 수 있고, 추간판이 아닌 근육이나
-                    인대의 문제일 수도 있습니다.<br />
-                    교과서적으로는 소염제를 복용하거나 파스를 붙여서 염증 및 통증을 줄이고, 허리 근육 강화를 통해서 허리
-                    구조물을 안정화 시키는 게 일반적으로 추천되는 방법입니다.<br />
-                    진단을 위해서는 X선 검사와 MRI 검사가 필요합니다.
-                  </p>
-                </div>
-              </div>
-              <div class="qna_list">
-                <div class="que">
-                  <b class="blin">Q</b>
-                  <p>tab4 허리 뼈 소리나게 돌리고난 후 다음날 너무 아파요. 어떤치료를 받아야할까요?</p>
-                  <i class="fa-solid fa-angle-down"></i>
-                </div>
-                <div class="ans">
-                  <b class="blin">A</b>
-                  <p>
-                    안녕하세요. 홍덕진 의사입니다.<br /><br />
-                    허리 통증을 유발하는 기전은 흔히들 잘 알고 있는 디스크 (추간판 탈출증) 외에도 다양합니다.<br />
-                    물리적인 추간판 탈출이 아니더라도 면역 반응에 의한 염증이 발생할 수 있고, 추간판이 아닌 근육이나
-                    인대의 문제일 수도 있습니다.<br />
-                    교과서적으로는 소염제를 복용하거나 파스를 붙여서 염증 및 통증을 줄이고, 허리 근육 강화를 통해서 허리
-                    구조물을 안정화 시키는 게 일반적으로 추천되는 방법입니다.<br />
-                    진단을 위해서는 X선 검사와 MRI 검사가 필요합니다.
-                  </p>
-                </div>
-              </div>
+              <span>2023.08.29</span>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="partners">
-        <div class="inner">
-          <h2 class="title blin">Our<br />Partners</h2>
-          <ul>
-            <li><img src="img/partner01.png" alt="" /></li>
-            <li><img src="img/partner02.png" alt="" /></li>
-            <li><img src="img/partner03.png" alt="" /></li>
-          </ul>
+          <div class="paging">
+            <button class="start"><i class="fa-solid fa-angles-left"></i></button>
+            <button class="prev"><i class="fa-solid fa-chevron-left"></i></button>
+            <ul>
+              <li><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+            </ul>
+            <button class="next"><i class="fa-solid fa-chevron-right"></i></button>
+            <button class="end"><i class="fa-solid fa-angles-right"></i></button>
+          </div>
         </div>
       </section>
     </main>
@@ -315,6 +164,7 @@
           </div>
           <nav>
             <a href="service.html">서비스 소개</a>
+            <a href="qna.html">전문가 답변</a>
             <a href="faq.html">자주묻는 질문</a>
             <a href="notice.html">공지사항</a>
             <a href="contact.html">문의하기</a>
