--- a/notice.html
+++ b/notice.html
@@ -40,14 +40,8 @@
         <!-- head_search => index 비노출 -->
         <div class="head_search">
           <div class="input_wrap">
-            <input
-              type="search"
-              name="mainSearch"
-              id="mainSearch"
-              onclick="location.href='qna.html'"
-              placeholder="궁금한 것은 무엇이든 물어보세요!"
-            />
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <input type="search" name="mainSearch" id="mainSearch" placeholder="궁금한 것은 무엇이든 물어보세요!" />
+            <button onclick="location.href='qna.html'"><i class="fa-solid fa-magnifying-glass"></i></button>
           </div>
         </div>
         <div class="head_contents">
@@ -125,32 +119,32 @@
             </thead>
             <tbody>
               <tr>
-                <td><a href="view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
+                <td><a href="notice_view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
                 <td class="date">2023.08.25</td>
               </tr>
               <tr>
-                <td><a href="view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
+                <td><a href="notice_view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
                 <td class="date">2023.08.25</td>
               </tr>
               <tr>
-                <td><a href="view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
+                <td><a href="notice_view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
                 <td class="date">2023.08.25</td>
               </tr>
               <tr>
-                <td><a href="view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
+                <td><a href="notice_view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
                 <td class="date">2023.08.25</td>
               </tr>
               <tr>
-                <td><a href="view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
+                <td><a href="notice_view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
                 <td class="date">2023.08.25</td>
               </tr>
               <tr>
-                <td><a href="view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
+                <td><a href="notice_view.html">화성 자원순환시설서 불 서해안고속도로 한 때 출입 통제</a></td>
                 <td class="date">2023.08.25</td>
               </tr>
             </tbody>
           </table>
-          <button class="write_btn" onclick="location.href='write.html'">글작성</button>
+          <button class="write_btn" onclick="location.href='notice_write.html'">글작성</button>
           <div class="paging">
             <button class="start"><i class="fa-solid fa-angles-left"></i></button>
             <button class="prev"><i class="fa-solid fa-chevron-left"></i></button>
@@ -175,6 +169,7 @@
           </div>
           <nav>
             <a href="service.html">서비스 소개</a>
+            <a href="qna.html">전문가 답변</a>
             <a href="faq.html">자주묻는 질문</a>
             <a href="notice.html">공지사항</a>
             <a href="contact.html">문의하기</a>
