--- a/notice_view.html
+++ b/notice_view.html
@@ -40,14 +40,8 @@
         <!-- head_search => index 비노출 -->
         <div class="head_search">
           <div class="input_wrap">
-            <input
-              type="search"
-              name="mainSearch"
-              id="mainSearch"
-              onclick="location.href='qna.html'"
-              placeholder="궁금한 것은 무엇이든 물어보세요!"
-            />
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            <input type="search" name="mainSearch" id="mainSearch" placeholder="궁금한 것은 무엇이든 물어보세요!" />
+            <button onclick="location.href='qna.html'"><i class="fa-solid fa-magnifying-glass"></i></button>
           </div>
         </div>
         <div class="head_contents">
@@ -101,14 +95,45 @@
       </div>
     </header>
     <main>
-      <section class="notice_write">
-        <h2 class="title blin">글쓰기</h2>
+      <section class="notice_view">
+        <h2 class="title blin">NOTICE</h2>
         <div class="wrap">
-          <label for="">제목</label>
-          <input type="text" placeholder="제목을 입력하세요." />
-          <label for="">내용</label>
-          <textarea name="" id="" cols="30" rows="10" placeholder="에디터 삽입 영역"></textarea>
-          <input type="submit" value="등록하기" />
+          <div class="con_title">
+            <p>원전 오염수 방류 시작하자 ‘실감’…수산물·건어물 매출 급등</p>
+            <span>2023.08.25</span>
+          </div>
+          <div class="con_cont">
+            <p>
+              25일 오전 서울 송파구 한 대형마트. 수산물과 건어물 코너에는 오전부터 쇼핑객들로 붐볐다. 김, 미역, 황태,
+              멸치 등의 건어물과 냉동 생선을 담은 카트가 곳곳에서 눈에 띄었다. 일부 상품은 마트가 문을 연 지 얼마 되지
+              않았는데도 물건이 대량으로 빠져 있었다. 수산물 코너에서 만난 정은미(43)씨도 건어물과 해산물을 여러 개씩
+              담고 있었다. 정씨는 “어제 원전 오염수 방류를 실시간 영상으로 보니까 ‘정말 하는구나’ 실감이 났다”며 “사재기
+              같은 것 좋아하지 않는데, 이제 안심하고 해산물을 먹을 수 없다고 생각하니까 오래 보관 가능한 건어물,
+              냉동식품 위주로 최대한 사려고 한다”고 말했다. 지난 24일 일본이 후쿠시마 제1원자력발전소 오염수 방류를
+              시작하자 수산물과 건어물, 건해산물 매출이 크게 늘었다. 정씨처럼 오래 보관할 수 있는 상품들 위주로 구매하는
+              이들이 급증하면서 건해산물 매출이 눈에 띄게 증가했다. 원전 오염수 방류가 시작된 당일에도 이 같은 흐름이
+              나타났다. 한 대형마트의 지난 24일 수산물 매출은 작년 8월 24일보다 35%가량 증가했다. 저장하기에 좋은 멸치나
+              황태 같은 건어물은 130%, 미역 다시마 등 건해조류는 100% 매출이 늘었다. 건어물·건해산물 위주로 배 이상 매출
+              증가세가 나타난 셈이다. 또 다른 대형마트에서도 비슷한 양상이 나타났다. 전체 수산물 매출은 전년 동일 대비
+              약 15%, 건해산물 매출은 약 40% 늘었다. 멸치와 미역으로 좁히면 각각 150%, 180% 증가하면서 2.5~2.8배 매출
+              급등세를 보였다. 소금 매출은 전년 동일 대비 3.5배나 뛰었다. 오래 보관할 수 있는 상품들에 대한 수요 급증이
+              확인된다. 온라인에서도 수산물·건어물 주문량이 증가하는 추세다. 이커머스 전문기업 커넥트웨이브의 가격 비교
+              서비스 다나와에 따르면 원전 오염수 방류 소식이 전해지던 지난 17~23일 소금 거래액이 전주 동기 대비 238%
+              증가했다. 특히 국내산 천일염의 지난 23일 거래액은 일주일 전보다 431% 상승했다. 다만 지난 6월과 같은
+              품귀현상까지는 아직 빚어지지 않고 있다. 유통업계 한 관계자는 “소비자들의 불안 심리가 수산물과 건어물 매출
+              급등으로 확인되는 듯하다. 이 같은 현상이 얼마만큼 지속될 지 예의주시하면서 대응책을 마련하고 있다”며
+              “일본산 수산물은 취급하지 않고 있고, 방사능 검사도 철저히 하면서 안전 확보에 만전을 기할 것”이라고 말했다.
+              문수정 기자 thursday@kmib.co.kr [출처] - 국민일보 [원본링크] -
+              https://news.kmib.co.kr/article/view.asp?arcid=0018601347&code=61141111&sid1=eco&cp=nv2
+            </p>
+          </div>
+          <div class="view_paging">
+            <button><i class="fa-solid fa-chevron-left"></i> 이전글</button>
+            <button class="return" onclick="location.href='notice.html'">
+              <i class="fa-solid fa-bars"></i>
+            </button>
+            <button>다음글 <i class="fa-solid fa-chevron-right"></i></button>
+          </div>
         </div>
       </section>
     </main>
@@ -120,6 +145,7 @@
           </div>
           <nav>
             <a href="service.html">서비스 소개</a>
+            <a href="qna.html">전문가 답변</a>
             <a href="faq.html">자주묻는 질문</a>
             <a href="notice.html">공지사항</a>
             <a href="contact.html">문의하기</a>
