--- a/service.html
+++ b/service.html
@@ -33,7 +33,7 @@
     <header>
       <div class="head_top">
         <div class="logo">
-          <a href="/">
+          <a href="index.html">
             <img src="img/logo.png" alt="" />
           </a>
         </div>
