모바일 개발중

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <body>
     <header>
       <div class="head_top">
+        <div class="mobile_menu_btn"><i class="fa-solid fa-bars"></i></div>
         <div class="logo">
           <a href="index.html">
             <img src="img/logo.png" alt="" />
@@ -58,6 +59,24 @@
           </div>
           <div class="lang">
             <p class="blin lang_btn"><a href="#none" class="active">KOR</a> | <a href="#none">ENG</a></p>
+          </div>
+          <div class="close_mobile_btn">
+            <i class="fa-solid fa-xmark"></i>
+          </div>
+          <div class="mobile_menu">
+            <ul class="mobile_nav">
+              <li><a href="service.html">서비스 소개</a></li>
+              <li><a href="qna.html">전문가 답변</a></li>
+              <li><a href="faq.html">자주묻는 질문</a></li>
+              <li><a href="notice.html">공지사항</a></li>
+              <li><a href="contact.html">문의하기</a></li>
+            </ul>
+            <ul class="mobile_login">
+              <li><a href="">로그인</a></li>
+              <li><a href="myfaq.html">활동관리</a></li>
+              <li><a href="mypage.html">개인정보 관리</a></li>
+              <li><a href="">로그아웃</a></li>
+            </ul>
           </div>
         </div>
       </div>
