모바일 메뉴영역 수정

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <img src="img/logo.png" alt="" />
           </a>
         </div>
+        <div class="mobile_alert">
+          <i class="fa-regular fa-bell"></i>
+        </div>
         <!-- head_search => index 비노출 -->
         <div class="head_search">
           <div class="input_wrap">
