모바일 수정중

--- a/faq.html
+++ b/faq.html
@@ -129,10 +129,10 @@
         </div>
         <div class="inner">
           <ul class="tab">
-            <li data-tab="tab1" class="active">척추1</li>
-            <li data-tab="tab2">척추2</li>
-            <li data-tab="tab3">척추3</li>
-            <li data-tab="tab4">척추4</li>
+            <li data-tab="tab1" class="active">정신질환 관련</li>
+            <li data-tab="tab2">이비인후과</li>
+            <li data-tab="tab3">성형외과</li>
+            <li data-tab="tab4">그외 기타질환</li>
           </ul>
           <div class="contents">
             <div class="list tab1 active">
