--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
         </ul>
       </div>
     </header>
+    <style>
+      .head_search {
+        display: none;
+      }
+    </style>
     <main>
       <section class="search">
         <h2 class="title blin">All That Spine</h2>
