--- a/notice.html
+++ b/notice.html
@@ -130,8 +130,8 @@
         <div class="inner">
           <table>
             <colgroup>
-              <col width="80%" />
-              <col width="20%" />
+              <col width="70%" />
+              <col width="30%" />
             </colgroup>
             <thead>
               <tr>
@@ -166,7 +166,9 @@
               </tr>
             </tbody>
           </table>
-          <button class="write_btn" onclick="location.href='notice_write.html'">글작성</button>
+          <div class="btn_wrap">
+            <button class="write_btn" onclick="location.href='notice_write.html'">글작성</button>
+          </div>
           <div class="paging">
             <button class="start"><i class="fa-solid fa-angles-left"></i></button>
             <button class="prev"><i class="fa-solid fa-chevron-left"></i></button>
