--- a/qna.html
+++ b/qna.html
@@ -116,6 +116,11 @@
         </ul>
       </div>
     </header>
+    <style>
+      .head_search {
+        display: none;
+      }
+    </style>
     <main>
       <section class="qna">
         <div class="top_banner">
