컬러 및 css 수정

--- a/qna.html
+++ b/qna.html
@@ -136,11 +136,21 @@
           <div class="search">
             <h2 class="title blin">All That Spine</h2>
             <div class="input_wrap">
-              <input type="search" name="" id="" />
-              <button><i class="fa-solid fa-magnifying-glass"></i></button>
+              <form action="">
+                <input type="search" name="search_qna" id="search_qna" />
+                <button type="button" onclick="checkForm()"><i class="fa-solid fa-magnifying-glass"></i></button>
+              </form>
             </div>
           </div>
           <p class="login_text">로그인을 하면 AI 답변을 받을 수 있어요.</p>
+          <div class="chat_wrap">
+            <p class="chat">
+              척추 통증은 다양한 원인으로 인해 발생할 수 있습니다. 만약 급격한 외상이나 사고로 인해 통증이 발생하였다면,
+              즉시 응급 조치를 취해야 합니다. 하지만 만약 만성적인 통증이라면, 일상생활에서 자세나 움직임을 조절하거나,
+              스트레칭, 운동, 마사지 등의 방법으로 완화시킬 수 있습니다. 그러나 만약 통증이 심하거나, 발생 원인을
+              파악하기 어렵다면 전문의료기관을 방문하여 진단 및 치료를 받는 것이 좋습니다. <span>- AI 챗봇..</span>
+            </p>
+          </div>
           <div class="qna_list">
             <div class="que" onclick="location.href='qna_view.html'">
               <div class="title">
@@ -255,5 +265,22 @@
       </div>
       <div class="popup_bg"></div>
     </footer>
+    <script>
+      function checkForm() {
+        let search = $('#search_qna');
+        if (search.val() == 0) {
+          alert('검색어를 입력하세요.');
+          search.focus();
+          return false;
+        } else if (search.val() <= 1) {
+          alert('검색어를 두자 이상 입력하세요.');
+          search.focus();
+          return false;
+        } else {
+          alert('문장형 또는 2개 이상의 키워드를 입력하면 좋은 답변을 받을 수 있어요.');
+          return true;
+        }
+      }
+    </script>
   </body>
 </html>
