--- a/notice.html
+++ b/notice.html
@@ -128,6 +128,7 @@
           </div>
         </div>
         <div class="inner">
+          <h2 class="title blin">NOTICE</h2>
           <table>
             <thead>
               <tr>
