--- a/qna_view.html
+++ b/qna_view.html
@@ -345,5 +345,11 @@
       </div>
       <div class="popup_bg"></div>
     </footer>
+    <script>
+      $('.bookmark').click(function () {
+        //alert('관심 질문이 추가되었습니다.');
+        alert('이 기능은 회원만 이용할 수 있습니다.\n로그인 후 이용 해 주시기 바랍니다.');
+      });
+    </script>
   </body>
 </html>
