컬러 및 css 수정

--- a/qna.html
+++ b/qna.html
@@ -151,6 +151,12 @@
               파악하기 어렵다면 전문의료기관을 방문하여 진단 및 치료를 받는 것이 좋습니다. <span>- AI 챗봇..</span>
             </p>
           </div>
+          <div class="recom_wrap">
+            <h2 class="title"><img src="img/no_profile.png" alt="" />추천 질문</h2>
+            <p class="recom">목이랑 날개뼈 척추 사이가 아파요?</p>
+            <p class="recom">척추 아래쪽 허리가 아파요 어떤 영양제가 좋을까요?</p>
+            <p class="recom">척추 통증은 다양한 원인으로 인해 발생할 수 있습니다?</p>
+          </div>
           <div class="qna_list">
             <div class="que" onclick="location.href='qna_view.html'">
               <div class="title">
