파트너스 css 수정

--- a/index.html
+++ b/index.html
@@ -310,8 +310,17 @@
       </section>
       <section class="partners">
         <div class="inner">
-          <h2 class="title blin">Our<br />Partners</h2>
+          <h2 class="title blin">Our Partners</h2>
           <ul>
+            <li><img src="img/partner01.png" alt="" /></li>
+            <li><img src="img/partner02.png" alt="" /></li>
+            <li><img src="img/partner03.png" alt="" /></li>
+            <li><img src="img/partner01.png" alt="" /></li>
+            <li><img src="img/partner02.png" alt="" /></li>
+            <li><img src="img/partner03.png" alt="" /></li>
+            <li><img src="img/partner01.png" alt="" /></li>
+            <li><img src="img/partner02.png" alt="" /></li>
+            <li><img src="img/partner03.png" alt="" /></li>
             <li><img src="img/partner01.png" alt="" /></li>
             <li><img src="img/partner02.png" alt="" /></li>
             <li><img src="img/partner03.png" alt="" /></li>
